fix(sizes): added some width sizes and spacing by rem and added button variant

--- a/src/index.css
+++ b/src/index.css
@@ -52,6 +52,19 @@ html {
   --text-h2: 2.25rem; /* 36px (Section Title) */
   --text-h1: 3rem; /* 48px (Page Title) */
 
+  --width-button-sm: 8.125rem; /* 130px */
+  --width-button-md: 13.75rem; /* 220px */
+  --width-button-lg: 28.125rem; /* 420px */
+
+  --space-xs: 0.25rem; /* 4px–3px */
+  --space-sm: 0.48rem; /* 8px–7px */
+  --space-md: 1rem; /* 16px–13px */
+  --space-lg: 1.3rem; /* 23px–20px */
+  --space-lg: 1.5rem; /* 24px */
+  --space-xl: 2rem; /* 36px–32px */
+  --space-2xl: 3rem; /* 50px–40px */
+  --space-3xl: 3rem; /* 64px–50px */
+
   --radius-1: 0.188rem; /* 3px */
   --radius-2: 0.313rem; /* 5px */
   --radius-3: 0.375rem; /* 6px */
